[package]
name = "jrsonnet-gc"
version = "0.4.2"
authors = ["Manish Goregaokar <manishsmail@gmail.com>", "Nika Layzell <nika@thelayzells.com>"]
description = "Tracing garbage collector plugin for Rust."
repository = "https://github.com/Manishearth/rust-gc"
readme = "../README.md"
license = "MPL-2.0"
keywords = ["garbage", "plugin", "memory"]
edition = "2018"

[features]
nightly = []
derive = ["jrsonnet-gc-derive"]
unstable-config = []
unstable-stats = []

[dependencies]
jrsonnet-gc-derive = { path = "../gc_derive", version = "0.4.1", optional = true }

[dev-dependencies]
jrsonnet-gc-derive = { path = "../gc_derive", version = "0.4.1" }
